// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons Component: BreadcrumbIcon BreadcrumbIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6.667 4-.94.94L8.78 8l-3.053 3.06.94.94 4-4-4-4Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: CloseIconBlack CloseIconBlack renders with default props 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="24"
    viewBox="0 0 14 14"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: EmailIcon EmailIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 9.98V19C22 20.1 21.1 21 20 21H4C2.9 21 2 20.1 2 19L2.01 7C2.01 5.9 2.9 5 4 5H14.1C14.04 5.32 14 5.66 14 6C14 6.34 14.04 6.68 14.1 7H4L12 12L15.67 9.71C16.14 10.14 16.69 10.47 17.3 10.69L12 14L4 9V19H20V10.9C20.74 10.75 21.42 10.42 22 9.98ZM16 6C16 7.66 17.34 9 19 9C20.66 9 22 7.66 22 6C22 4.34 20.66 3 19 3C17.34 3 16 4.34 16 6Z"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: FilledArrowIcon FilledArrowIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m3.166 8 .94.94 3.727-3.72v8.113h1.333V5.22l3.72 3.727.947-.947-5.334-5.333L3.166 8Z"
      fill="currentcolor"
    />
  </svg>
</DocumentFragment>
`;
